[package]
name = "dwarf2sframe"
version = "0.1.0"
edition = "2021"

[dependencies]
elf-sframe = { path = "../sframe" }

anyhow = "1.0"
object = { version = "0.34", features = ["write"] }
gimli = "0.28"
memmap2 = "0.9"
fallible-iterator = "0.3.0"
typed-arena = "2.0.2"
clap = { version = "4.5.3", features = ["derive"] }
